syntax = "proto3";

package cloud.lianmi.im.msg;
option go_package = "github.com/lianmi/servers/api/proto/msg";

//向服务端发送获取阿里云OSS上传Token的请求，用业务号及子号即可
message GetOssTokenReq {

}

//响应参数
message GetOssTokenRsp {
    //资源服务器地址
    string endPoint  = 1;
    //空间名称
    string bucketName =2;
    // Bucket访问凭证
    string accessKeyId  = 3;
    // Bucket访问密钥
    string accessKeySecret = 4;
    // 安全凭证
    string securityToken = 5;
    // oss的文件目录，日期为目录名, 如：  2020/8/28， 客户端需要拼接为完整的上传文件名 
    string directory = 6;
    //token有效时长(单位S)
    fixed64 expire = 7;
    //服务器按json格式组装
    string callback = 8;

    //废除：服务器为新文件分配的文件名，注：该名字不带文件后缀，客户端自行将后缀拼接完整
    //改为以上传文件的md5作为文件名， string name = md5; 
}